2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATxmega32D4, ATxmega16A4, ATxmega16D4.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/Makefile.am: Same.
	* include/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/wdt.h: Same.
	* NEWS: Same.
	* devtools/gen-avr-lib-tree.sh (CFLAGS_SPACE_NO_CALL): Add. Optimize for
	space but without -mcall-prologues flag.
	(AVR6_DEV_INFO) Use CFLAGS_SPACE_NO_CALL.
	(AVRXMEGA6_DEV_INFO) Use CFLAGS_SPACE_NO_CALL on devices with 256K+ flash.

2009-02-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128rfa1.h: Fix some buglets noticed
	by Eric:
	  - the __NOSTRUCT__ logic was broken
	  - _VECTORS_SIZE was off by one vector
	  - the *_vect_num definitions were missing

2009-02-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Partial fix for bug #25535.
	* include/avr/iotn88.h: Remove SM2 bit definition.
	* include/avr/iotn48.h: Same.

2009-02-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: Add missing 3rd copyright clause.
	* doc/api/malloc.dox: (Ditto.)
	* doc/api/faq.dox: (Ditto.)

2009-02-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #25131.
	* include/avr/iotn2313.h: Fix LFUSE_DEFAULT definition.

2009-02-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Make definition of XRAMEND more consistent across all I/O header files.
	* include/avr/io.h: Add missing word in documentation on XRAMEND.
	* include/avr/iousb82.h: Change XRAMEND definition from a constant to
	RAMEND.
	* include/avr/iousb162.h: Same.
	* include/avr/iotn84.h: Same.
	* include/avr/iotn85.h: Same.
	* include/avr/iotn861.h: Same.
	* include/avr/iotn44.h: Same.
	* include/avr/iotn45.h: Same.
	* include/avr/iotn461.h: Same.
	* include/avr/iotn22.h: Same.
	* include/avr/iotn2313.h: Same.
	* include/avr/iotn24.h: Same.
	* include/avr/iotn25.h: Same.
	* include/avr/iotn26.h: Same.